--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       <div class="container">
         <h2 class="visually-hidden">Наши лучшие товары</h2>
         <div class="promo-slider">
-          <input class="visually-hidden" id="promo-slide1" name="promo-slides" type="radio" checked>
-          <input class="visually-hidden" id="promo-slide2" name="promo-slides" type="radio">
-          <input class="visually-hidden" id="promo-slide3" name="promo-slides" type="radio">
+          <input class="visually-hidden promo-slide1" id="promo-slide1" name="promo-slides" type="radio" checked>
+          <input class="visually-hidden promo-slide2" id="promo-slide2" name="promo-slides" type="radio">
+          <input class="visually-hidden promo-slide3" id="promo-slide3" name="promo-slides" type="radio">
           <ol class="promo-list">
             <li class="promo-item">
               <div class="promo-column">
@@ -200,9 +200,9 @@
       <div class="container">
         <h2 class="visually-hidden">Услуги</h2>
         <div class="services-slider">
-          <input class="visually-hidden" id="services-slide1" name="services-slides" type="radio" checked>
-          <input class="visually-hidden" id="services-slide2" name="services-slides" type="radio">
-          <input class="visually-hidden" id="services-slide3" name="services-slides" type="radio">
+          <input class="visually-hidden services-slide1" id="services-slide1" name="services-slides" type="radio" checked>
+          <input class="visually-hidden services-slide2" id="services-slide2" name="services-slides" type="radio">
+          <input class="visually-hidden services-slide3" id="services-slide3" name="services-slides" type="radio">
           <div class="services-active">
             <p>
               <label class="link btn" for="services-slide1" tabindex="0">Доставка</label>
@@ -359,7 +359,7 @@
         </li>
       </ul>
       <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-        <img src="img/logo-html.svg" alt="Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1">
+        <img src="img/logo-html.svg" width="27" height="35" alt="Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1">
       </a>
     </div>
   </footer>
