--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -310,7 +310,7 @@
         </li>
       </ul>
       <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-        <img src="img/logo-html.svg" alt="Интенсивный онлайн‑курс Профессиональный HTML и CSS,уровень 1">
+        <img src="img/logo-html.svg" width="27" height="35" alt="Интенсивный онлайн‑курс Профессиональный HTML и CSS,уровень 1">
       </a>
     </div>
   </footer>
