--- a/index.html
+++ b/index.html
@@ -274,14 +274,14 @@
         <h2 class="section-title">Контакты</h2>
         <p class="content">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <div class="map-container">
-          <a href="#">
+          <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9,+15,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119311/@55.687031,37.5274293,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54cf65f5c8955:0x694710ccd55501e!8m2!3d55.687031!4d37.529618" class="contacts-button-map" target="_blank">
             <img src="img/map.jpg" width="560" height="222" alt="Адрес нашей компании: Москва, улица Строителей, 15">
           </a>
         </div>
-        <a href="#" class="link btn">Напишите нам</a>
+        <a href="write-us.html" class="feedback-js link btn">Напишите нам</a>
       </section>
     </div>
-    <section class="modal-write-us">
+    <section class="modal modal-write-us">
       <h2 class="visually-hidden">Свяжитесь с нами</h2>
       <form class="contact-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
@@ -300,9 +300,10 @@
       </form>
       <button class="modal-close" type="button" tabindex="0">Закрыть окно</button>
     </section>
-    <section class="modal-map">
+    <section class="modal modal-map">
       <h2 class="visually-hidden">Как нас найти</h2>
       <div class="map">
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.112896739067!2d37.52745077391227!3d55.68702493255083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1522529101238" width="960" height="559"></iframe>
         <img src="img/map-big.jpg" width="960" height="559" alt="Адрес нашей компании: Москва, улица Строителей, 15">
       </div>
       <button class="modal-close" type="button" tabindex="0">Закрыть окно</button>
@@ -363,6 +364,8 @@
       </a>
     </div>
   </footer>
+  
+  <script src="js/main.js"></script>
 
 </body>
 
