Д11 Поправлено состояние у секции popular-product
Не понял, на счёт состояния disabled.

--- a/index.html
+++ b/index.html
@@ -176,22 +176,22 @@
         <h2 class="visually-hidden">Популярные продукты</h2>
         <ul class="popular-product-list">
           <li class="popular-product-item">
-            <a class="link" href="#">Виртуальная реальность</a>
+            <a class="link" href="virtual-reality.html">Виртуальная реальность</a>
           </li>
           <li class="popular-product-item">
             <a class="link" href="monopods-for-selfi.html">Моноподы для селфи</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="#">Экшн-камеры</a>
+            <a class="link" href="action-cameras.html">Экшн-камеры</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="#">Фитнес-браслеты</a>
+            <a class="link" href="fitness-wristbands.html">Фитнес-браслеты</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="#">Умные часы</a>
+            <a class="link" href="smart-watch.html">Умные часы</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="#">Квадракоптеры</a>
+            <a class="link" href="quadcopters.html">Квадракоптеры</a>
           </li>
         </ul>
       </div>
