--- a/index.html
+++ b/index.html
@@ -46,30 +46,30 @@
               <li class="sub-menu-item">
                 <ul class="video-gadgets-list" aria-label="Видео гаджеты">
                   <li class="video-gadgets-item">
-                    <a class="link-user-menu" href="#">Виртуальная реальность</a>
+                    <a class="link-user-menu" href="virtual-reality.html">Виртуальная реальность</a>
                   </li>
                   <li class="video-gadgets-item">
                     <a class="link-user-menu" href="monopods-for-selfi.html">Моноподы для слефи</a>
                   </li>
                   <li class="video-gadgets-item">
-                    <a class="link-user-menu" href="#">Экшн-камеры</a>
+                    <a class="link-user-menu" href="action-cameras.html">Экшн-камеры</a>
                   </li>
                 </ul>
               </li>
               <li class="sub-menu-item">
                 <ul class="wrist-accessories-list" aria-label="Наручные аксессуары">
                   <li class="wrist-accessories-item">
-                    <a class="link-user-menu" href="#">Фитнес-браслеты</a>
+                    <a class="link-user-menu" href="fitness-wristbands.html">Фитнес-браслеты</a>
                   </li>
                   <li class="wrist-accessories-item">
-                    <a class="link-user-menu" href="#">Умные часы</a>
+                    <a class="link-user-menu" href="smart-watch.html">Умные часы</a>
                   </li>
                 </ul>
               </li>
               <li class="sub-menu-item">
                 <ul class="quadcopters-list" aria-label="Квадрокоптеры">
                   <li class="quadcopters-item">
-                    <a class="link-user-menu" href="#">Квадрокоптеры</a>
+                    <a class="link-user-menu" href="quadcopters.html">Квадрокоптеры</a>
                   </li>
                 </ul>
               </li>
@@ -179,7 +179,7 @@
             <a class="link" href="virtual-reality.html">Виртуальная реальность</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="monopods-for-selfi.html">Моноподы для селфи</a>
+            <a class="link" href="monopods-for-selfi.html">Моноподы<span>для селфи</span></a>
           </li>
           <li class="popular-product-item">
             <a class="link" href="action-cameras.html">Экшн-камеры</a>
