Д7 Уменшил вложенность селекторов до двух  (Б11 каталог товаров, вторая карточка)
1. В меню пользователя футера заменил класс user-menu-item на footer-user-menu-item
2. В каталоге товаров, вторая карточка, перенес "селфи палка" на новую строку с помощю двух символов широкого пробела (&#8195;) в разметке.

--- a/index.html
+++ b/index.html
@@ -315,16 +315,16 @@
       <a class="logo">Device</a>
       <div class="user-menu">
         <ul class="user-menu-list" aria-label="Меню пользователя в футере">
-          <li class="user-menu-item">
+          <li class="footer-user-menu-item">
             <a class="link-user-menu" href="#">Войти</a>
           </li>
-          <li class="user-menu-item visually-hidden">
+          <li class="footer-user-menu-item visually-hidden">
             <a class="link-user-menu" href="#">Выйти</a>
           </li>
-          <li class="user-menu-item">
+          <li class="footer-user-menu-item">
             <a class="link-user-menu" href="#">Сравнить</a>
           </li>
-          <li class="user-menu-item">
+          <li class="footer-user-menu-item">
             <a class="link-user-menu" href="#">Корзина</a>
           </li>
         </ul>
