--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <a class="link" href="virtual-reality.html">Виртуальная реальность</a>
           </li>
           <li class="popular-product-item">
-            <a class="link" href="monopods-for-selfi.html">Моноподы<span>для селфи</span></a>
+            <a class="link" href="monopods-for-selfi.html">Моноподы для селфи</a>
           </li>
           <li class="popular-product-item">
             <a class="link" href="action-cameras.html">Экшн-камеры</a>
@@ -368,7 +368,7 @@
   </footer>
 
   <script src="js/main.js"></script>
-
+ 
 </body>
 
 </html>
