--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -204,7 +204,7 @@
           </li>
           <li class="catalog-item">
             <h3 class="catalog-item-title">
-              <a class="link" href="catalog-item.html">Профессиональная&#8195;&#8195;селфи-палка</a>
+              <a class="link" href="catalog-item.html">Профессиональная селфи-палка</a>
             </h3>
             <span class="catalog-item-price">1 500 руб.</span>
             <p class="catalog-item-image">
