Д18 Добалена карта с помощью google maps api

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как нас найти</h2>
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.112896739067!2d37.52745077391227!3d55.68702493255083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1522529101238" width="960" height="559"></iframe>
+<!--        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.112896739067!2d37.52745077391227!3d55.68702493255083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1522529101238" width="960" height="559"></iframe>-->
         <img src="img/map-big.jpg" width="960" height="559" alt="Адрес нашей компании: Москва, улица Строителей, 15">
       </div>
       <button class="modal-close" type="button" tabindex="0">Закрыть окно</button>
@@ -368,7 +368,10 @@
   </footer>
 
   <script src="js/main.js"></script>
- 
+  
+  
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAldXTkBz5wzGHFdLcgiuYc_aWkzd3Zv-Q&callback=initMap"></script>
+
 </body>
 
 </html>
