Д11 состояние disabled у радиокнопок в форме каталога
1. Отрисованно состояние disabled у радиокнопок в форме каталога.
2. добавлен атрибут value со значениями в форме каталога у чекбоксов и радиокнопок

--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -128,23 +128,23 @@
             <legend class="catalog-title">Цвет</legend>
             <ul class="color-filter-list" aria-label="Выберите цвет товара">
               <li class="color-filter-item">
-                <input class="visually-hidden" id="color-field-black" name="color-filter-black" type="checkbox" checked>
+                <input class="visually-hidden" id="color-field-black" name="color-filter-black" type="checkbox" value="black" checked>
                 <label for="color-field-black">Черный</label>
               </li>
               <li class="color-filter-item">
-                <input class="visually-hidden" id="color-field-white" name="color-filter-white" type="checkbox">
+                <input class="visually-hidden" id="color-field-white" name="color-filter-white" type="checkbox" value="white">
                 <label for="color-field-white">Белый</label>
               </li>
               <li class="color-filter-item">
-                <input class="visually-hidden" id="color-field-blue" name="color-filter-blue" type="checkbox" checked>
+                <input class="visually-hidden" id="color-field-blue" name="color-filter-blue" type="checkbox" value="blue" checked>
                 <label for="color-field-blue">Синий</label>
               </li>
               <li class="color-filter-item">
-                <input class="visually-hidden" id="color-field-red" name="color-filter-red" type="checkbox" checked>
+                <input class="visually-hidden" id="color-field-red" name="color-filter-red" type="checkbox" value="red" checked>
                 <label for="color-field-red">Красный</label>
               </li>
               <li class="color-filter-item">
-                <input class="visually-hidden" id="color-field-pink" name="color-filter-pink" type="checkbox">
+                <input class="visually-hidden" id="color-field-pink" name="color-filter-pink" type="checkbox" value="pink">
                 <label for="color-field-pink">Розовый</label>
               </li>
             </ul>
@@ -153,11 +153,11 @@
             <legend class="catalog-title">Bluetooth</legend>
             <ul class="bluetooth-filter-list" aria-label="Наличие блютуза">
               <li class="bluetooth-item">
-                <input class="visually-hidden" id="got-a-bluetooth-field" name="got-a-bluetooth" type="radio" checked>
+                <input class="visually-hidden" id="got-a-bluetooth-field" name="got-a-bluetooth" type="radio" value="bluetooth" checked>
                 <label for="got-a-bluetooth-field">Есть</label>
               </li>
               <li class="bluetooth-item">
-                <input class="visually-hidden" id="no-bluetooth-field" name="got-a-bluetooth" type="radio">
+                <input class="visually-hidden" id="no-bluetooth-field" name="got-a-bluetooth" type="radio" value="">
                 <label for="no-bluetooth-field">Нет</label>
               </li>
             </ul>
