--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Моноподы для селфи</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
